/***********************************************************************
X3 ChangeLog

2008-12-25  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Warning fixes.

	* src/proto-p10.c: Warning fixes.

2008-12-25  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* configure: Regenerated.

	* configure.in: Added math.h check.

	* rx/Makefile.in: Regenerated.

	* src/chanserv.c: Warning fixes.

	* src/config.h.in: Regenerated.
	
	* src/Makefile.in: Regenerated.

	* src/math.c: Warning fixes.

	* src/nickserv.c: Warning fixes.

	* src/opserv.c: Warning fixes.
 
	* src/proto-p10.c: Warning fixes.

2008-12-24  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Fix for SF bug #2423717. Invalid automode choices
	with a string will now show the invalid string rather than 0.

2008-12-24  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/nickserv.c: Fix for SF bug #2420339. Password change emails
	will not have the first time part in the email. Email change emails
	will have them though.

2008-12-24  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Fix for SF bug #2353222 (+l not being removed
	when dynlimit disabled.

2008-12-24  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: Fix for SF bug #2401693 (gsync not working properly).

2008-11-30  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/spamserv.c: Fix crash bug in ADDTRUST/DELTRUST

2008-11-25  Alex Schumann  <rubin@afternet.org>

	* src/mod-python.c: call run function instead of using
	pyrun_simplestring. Set global info for simple reply() to have what it
	needs to run.

	* src/modpython.py: new name as - interferes with module loading.
	added reply() function

2008-11-22  Alex Schumann  <rubin@afternet.org>

	* src/mod-python.c: Added ability to query info about nick or channel
	name

2008-11-16  Alex Schumann  <rubin@afternet.org>

	* src/mod-python.c: filled in some missing pieces.

	* src/mod-python.py: more demo code for testing
